# worldcup-business-copilot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  historical_world_cup.csv  teams.csv
src/: __init__.py  business_value.py
src/api/: main.py
src/app/: streamlit_app.py
src/core/: config.py
src/models/: schemas.py
src/services/: data.py  football_data.py  news.py  openai_service.py
src/worldcup_business_copilot/: __init__.py  analytics.py  app.py  config.py  data.py  llm.py
src/worldcup_business_copilot/src/: worldcup_api.py
tests/: test_api.py  test_app.py  test_scoring.py
