[project]
name = "worldcup-business-copilot"
version = "0.1.0"
description = "World Cup team performance and business value intelligence app"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
